--- a/src/app/clinical-services/clinic-history-static/clinic-history-static-form/clinic-history-static-form.component.html
+++ b/src/app/clinical-services/clinic-history-static/clinic-history-static-form/clinic-history-static-form.component.html
@@ -1,5 +1,7 @@
 <div class="form">
-    <h4>{{ data.clinicHistoryStatic === null ? 'Crear Historia Clínica' : 'Editar Historia Clínica' }}</h4>
+
+
+    //<h4>{{ data.clinicHistoryStatic === null ? 'Crear Historia Clínica' : 'Editar Historia Clínica' }}</h4>
     <mat-divider class="my-4"></mat-divider>
     <form *ngIf="clinicHistoryStaticForm" [formGroup]="clinicHistoryStaticForm">
         <mat-form-field class="w-100" appearance="outline">
@@ -20,11 +22,11 @@
 
     </form>
     <mat-divider class="my-4"></mat-divider>
-    <div class="d-flex align-items-center justify-content-end">
+    <!-- <div class="d-flex align-items-center justify-content-end">
         <button (click)="onCancel()" mat-raised-button color="default" class="button mx-2">Cancelar</button>
         <button (click)="onSubmit(clinicHistoryStaticForm.value)" [disabled]="!clinicHistoryStaticForm.valid"
             mat-raised-button color="primary" class="button">
             {{ data.clinicHistoryStatic === null ? 'Crear' : 'Aceptar' }}
         </button>
-    </div>
+    </div> -->
 </div>
