--- a/src/app/clinical-services/clinic-history-static/clinic-history-static-page/clinic-history-static-page.component.html
+++ b/src/app/clinical-services/clinic-history-static/clinic-history-static-page/clinic-history-static-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3">
     <div class="d-flex justify-content-between align-items-center">
         <h4>Historia Clínica</h4>
-        <button (click)="createClinicHistoryStatic()" mat-raised-button color="primary" class="button">Crear Historia
+        <button (click)="goToForm()" mat-raised-button color="primary" class="button">Crear Historia
             Clínica</button>
     </div>
     <app-custom-table *ngIf="clinicHistoryStatic" [data]="clinicHistoryStatic" [dataCount]="dataCount"
